--- a/index.html
+++ b/index.html
@@ -5,30 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matty Bradley - Artist</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="./src/styles.css" />
 </head>
 
 <body>
-    <div class="icon" id="icon"></div>
-
-    <script>
-        const icon = document.getElementById("icon");
-
-        icon.onclick = function () {
-            icon.classList.toggle('active');
-
-        }
-    </script>
-
-    <h1>Matty Bradley</h1>
+    <div class="container">
+        <div class="menu_icon_box">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+        <div class="box">
+            <nav>
+                <ul>
+                    <li><a href="#">Matty Bradley</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
+                    <li><a href="#">Exhibitions</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Career</a></li>
+                    <li><a href="#">Inspiration</a></li>
+                    <li><a href="#">Contact</a></li>
+
+                </ul>
+
+            </nav>
+        </div>
+
+    </div>
 </body>
+<script>
+    let menu_icon_box = document.querySelector(".menu_icon_box");
+    let box = document.querySelector(".box");
+
+    menu_icon_box.onclick = function () {
+        menu_icon_box.classList.toggle("active");
+        box.classList.toggle("active");
+    }
+    document.onclick = function (e) {
+        if (!menu_icon_box.contains(e.target) && !box.contains(e.target)) {
+            menu_icon_box.classList.remove("active");
+            box.classList.remove("active");
+        }
+    }
+</script>
 
 </html>
